Fixing overflow on mobile version

--- a/css/main.css
+++ b/css/main.css
@@ -6,19 +6,31 @@
     padding: 3.5rem 0;
     background-image: url('/img/logo.svg');
     background-repeat: no-repeat;
-    background-position: left 10% bottom -70%;
+    background-position: 50% 100%;
     background-attachment: fixed;
     position: relative;
 }
 
 .cover-content {
     background-image: url('/img/original.jpg');
+    background-size: cover;
     width: 950px;
     height: 600px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+@media (max-width: 960px) {
+    #sauce-cover {
+        padding: 0;
+    }
+
+    .cover-content {
+        width: 100%;
+        height: 90vh;
+    }
 }
 
 .cover-content__title {
@@ -28,6 +40,13 @@
     line-height: 1.2;
     width: 35rem;
     color: #33302D;
+}
+
+@media (max-width: 960px) {
+    .cover-content__title {
+        width: 100%;
+        font-size: 3.5rem;
+    }
 }
 
 .cover-content__button {
@@ -54,15 +73,41 @@
     width: 44rem;
 }
 
+@media (max-width: 960px) {
+    .sauce-showcase__title {
+        font-size: 3.5rem;
+        width: 100%;
+    }
+}
+
 .sauce-showcase__container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(275px, 1fr));
-    grid-gap: 2rem;
-    max-width: 880px;
-    align-content: center;
+    grid-template-columns: repeat(2, 40vmin);
+    /* width: 880px; */
+    grid-gap: 3.5rem;
     margin: 1rem auto;
+    /* height: 100vh; */
+    justify-content: center;
+    align-content: center;
+    min-height: 0;
+    min-width: 0;
+}
+
+@media (max-width: 640px) {
+    .sauce-showcase__container {
+        grid-template-columns: 60vmin;
+        grid-gap: 2rem;
+    }
+}
+
+.sauce-showcase__item {
+    overflow: hidden;
+    min-width: 0;
 }
 
 .sauce-showcase__item--img {
-    width: 100%;
+    display: block;
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
 }
